chore: Rename to flyyer

--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-  "name": "@flayyer/nice-typography",
+  "name": "@flyyer/nice-typography",
   "version": "1.1.0",
   "private": true,
   "scripts": {
-    "start": "flayyer start",
-    "build": "flayyer build",
-    "deploy": "flayyer deploy",
+    "start": "flyyer start",
+    "build": "flyyer build",
+    "deploy": "flyyer deploy",
     "format": "xo --fix"
   },
   "author": {
-    "email": "patricio@flayyer.com",
+    "email": "patricio@flyyer.io",
     "name": "Patricio Lopez J."
   },
   "repository": {
-    "url": "https://github.com/flayyer/flayyer-marketplace-nicetypography.git"
+    "url": "https://github.com/useflyyer/flyyer-marketplace-nicetypography.git"
   },
   "license": "MIT",
   "dependencies": {
-    "@flayyer/flayyer-types": "^1.11.0",
-    "@flayyer/proxy": "^1.0.0",
-    "@flayyer/use-fit-text": "^2.4.1",
-    "@flayyer/use-googlefonts": "^0.3.0",
-    "@flayyer/variables": "^1.6.0",
+    "@flyyer/types": "^2.0.0",
+    "@flyyer/proxy": "^2.0.0",
+    "@flyyer/use-fit-text": "^3.0.0",
+    "@flyyer/use-googlefonts": "^0.4.0",
+    "@flyyer/variables": "^2.0.0",
     "clsx": "^1.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "use-smartcrop": "^0.3.4"
   },
   "devDependencies": {
-    "@flayyer/cli": "^1.17.1",
+    "@flyyer/cli": "^2.0.0",
     "@fullhuman/postcss-purgecss": "^4.0.3",
     "@tailwindcss/postcss7-compat": "^2.2.4",
     "@types/react": "^17.0.4",
